# duty

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  devdeps.txt  duties.py  gen_credits.py  gen_ref_nav.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml
assets/javascripts/: bundle.993eca2e.min.js
changelog/: index.html
code_of_conduct/: index.html
config/: black.toml  coverage.ini  flake8.ini  mypy.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_002c493ad4b8202f_arguments_py.html  d_002c493ad4b8202f_basic_py.html  d_002c493ad4b8202f_booleans_py.html  d_002c493ad4b8202f_code_py.html  d_002c493ad4b8202f_list_py.html  d_002c493ad4b8202f_multiple_py.html  d_002c493ad4b8202f_precedence_py.html  d_002c493ad4b8202f_validation_38_py.html  d_002c493ad4b8202f_validation_py.html  d_2817508a90a01518_cli_py.html  d_2817508a90a01518_collection_py.html  d_2817508a90a01518_context_py.html  d_2817508a90a01518_decorator_py.html  d_2817508a90a01518_exceptions_py.html  d_2817508a90a01518_validation_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_collection_py.html  d_a44f0ac069e85531_test_context_py.html  d_a44f0ac069e85531_test_decorator_py.html  d_a44f0ac069e85531_test_running_py.html  d_a44f0ac069e85531_test_validation_py.html  function_index.html  index.html  src_duty_cli_py.html  src_duty_collection_py.html  src_duty_context_py.html  src_duty_decorator_py.html  src_duty_exceptions_py.html  src_duty_validation_py.html  status.json  tests_conftest_py.html  tests_fixtures_arguments_py.html  tests_fixtures_basic_py.html  tests_fixtures_booleans_py.html  tests_fixtures_code_py.html  tests_fixtures_list_py.html  tests_fixtures_multiple_py.html  (+50 more)
credits/: index.html
css/: mkdocstrings.css
docs/: gen_credits.py  index.md  usage.md
docs/.overrides/partials/: comments.html
docs/reference/: api.md  cli.md  collection.md  context.md  decorator.md  exceptions.md  logic.md  validation.md
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/__main__/: index.html
reference/api/: index.html  index.md
reference/cli/: index.html
reference/collection/: index.html
reference/context/: index.html
reference/decorator/: index.html
reference/duty/: index.html
reference/duty/callables/: index.html
reference/duty/callables/autoflake/: index.html
reference/duty/callables/black/: index.html
reference/duty/callables/blacken_docs/: index.html
reference/duty/callables/coverage/: index.html
reference/duty/callables/flake8/: index.html
reference/duty/callables/git_changelog/: index.html
reference/duty/callables/griffe/: index.html
reference/duty/callables/interrogate/: index.html
reference/duty/callables/isort/: index.html
reference/duty/callables/mkdocs/: index.html
reference/duty/callables/mypy/: index.html
reference/duty/callables/pytest/: index.html
reference/duty/callables/ruff/: index.html
reference/duty/callables/safety/: index.html
reference/duty/callables/ssort/: index.html
reference/duty/callables/twine/: index.html
reference/duty/cli/: index.html
reference/duty/collection/: index.html
reference/duty/context/: index.html
reference/duty/debug/: index.html
reference/duty/decorator/: index.html
reference/duty/exceptions/: index.html
reference/duty/tools/: index.html
reference/duty/validation/: index.html
reference/exceptions/: index.html
reference/logic/: index.html
reference/validation/: index.html
scripts/: gen_credits.py  gen_ref_nav.py  make  make.py  multirun.sh  run_task.sh
search/: search_index.json
src/duty/: __init__.py  __main__.py  _completion.py  cli.py  collection.py  completion.py  completions.bash  completions.zsh  context.py  debug.py  decorator.py  exceptions.py  logic.py  tools.py  validation.py
src/duty/_internal/: cli.py  collection.py  context.py  debug.py  decorator.py  exceptions.py  validation.py
src/duty/_internal/callables/: __init__.py  _io.py  autoflake.py  black.py  blacken_docs.py  build.py  coverage.py  flake8.py  git_changelog.py  griffe.py  interrogate.py  isort.py  mkdocs.py  mypy.py  pytest.py  ruff.py  safety.py  ssort.py  twine.py
src/duty/_internal/tools/: __init__.py  _autoflake.py  _base.py  _black.py  _blacken_docs.py  _build.py  _coverage.py  _flake8.py  _git_changelog.py  _griffe.py  _interrogate.py  _isort.py  _mkdocs.py  _mypy.py  _pytest.py  _ruff.py  _safety.py  _ssort.py  _twine.py  _ty.py  _yore.py  _zensical.py
src/duty/callables/: __init__.py  _io.py  autoflake.py  black.py  blacken_docs.py  build.py  coverage.py  flake8.py  git_changelog.py  griffe.py  interrogate.py  isort.py  mkdocs.py  mypy.py  pytest.py  ruff.py  safety.py  ssort.py  twine.py
src/duty/tools/: __init__.py  _autoflake.py  _base.py  _black.py  _blacken_docs.py  _build.py  _coverage.py  _flake8.py  _git_changelog.py  _griffe.py  _interrogate.py  _isort.py  _mkdocs.py  _mypy.py  _pytest.py  _ruff.py  _safety.py  _ssort.py  _twine.py  _yore.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_collection.py  test_context.py  test_decorator.py  test_logic.py  test_running.py  test_validation.py
tests/fixtures/: arguments.py  basic.py  booleans.py  code.py  list.py  multiple.py  precedence.py  validation.py  validation_38.py
tests/test_completion/: __init__.py  test_bash.py  test_zsh.py  utils.py
usage/: index.html
